auth part 1 is completed
